<resources>
    <string name="app_name">GS300_Kotlinm</string>
    <string name="aproxime_o_cart_o_da_leitora">Aproxime o cartão da leitora.</string>

    <string name="message_write_error">Erro ao gravar informação!</string>
    <string name="message_write_success">Sucesso ao gravar informação!</string>
    <string name="message_write_progress">Gravando informação..</string>
    <string name="message_tag_detected">Cartão lido com sucesso!</string>
    <string name="message_read_tag">Leitura do Cartão NFC</string>
    <string name="message_read">Aproxime o cartão</string>
    <string name="message_write_tag">Gravar Cartão</string>
    <string name="message_write_read_tag">Gravar/Ler Cartão</string>
    <string name="message_tap_tag">Toque na tag NFC no seu dispositivo!</string>
    <string name="message_format_tag">Formatar Cartão</string>
    <string name="gravar_no_cart_o">Gravar no Cartão</string>
    <string name="ler_cart_o">Ler Cartão</string>
    <string name="formatar_cart_o">Formatar Cartão</string>
    <string name="teste_leitura_grava_o">Teste Leitura/Gravação</string>

    <string name="bar_code_width">Bar Code Width</string>
    <string name="bar_code_height">Bar Code Height</string>
    <string name="status_impressora">Status Impressora</string>
    <string name="escreva_a_sua_mensagem">Escreva a sua mensagem</string>
    <string name="configura_o_de_impress_o">Configuração de impressão</string>
    <string name="esquerda">Esquerda</string>
    <string name="centralizado">Centralizado</string>
    <string name="direita">Direita</string>
    <string name="negrito">Negrito</string>
    <string name="altura_dupla">Altura Dupla</string>
    <string name="largura_dupla">Largura Dupla</string>
    <string name="sublinhado">Sublinhado</string>
    <string name="size">Size:</string>
    <string name="imprimir">Imprimir Texto</string>
    <string name="imprimir_imagem">Imprimir imagem</string>
    <string name="barcodes">BarCodes</string>
    <string name="imprimir_barcode">Imprimir BarCode</string>
    <string name="imprimir_todasasfuncoes">Imprimir Diversas Funções</string>
    <string name="font">Font:</string>


    <string name="kiosk_title">Impressora</string>
    <string name="stop_lock_task">Imprimir Cupom</string>
    <string name="start_lock_task">Imprimir Imagem</string>
    <string name="print_qrcode">Imprimir QR Code</string>
    <string name="print_codabar">Imprimir Código de barras</string>


    <string name="dados_display">Dados Display</string>
    <string name="enviar_dados">Enviar Dados</string>
    <string name="apagar_display">Apagar Display</string>

    //TEF
    <string name="menu_settings">Settings</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="scanning">scanning for devices...</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="secure_connect">Connect a bluetooth device</string>

    <string name="sistema_gertec">SISTEMA GERTEC</string>
    <string name="insira_valor_compra">INSIRA O VALOR DA COMPRA</string>
    <string name="moeda_valor">R$ 0,00</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="lista_compras_maiuscula">LISTA DE COMPRAS</string>
    <string name="finalizar_compra">FINALIZAR COMPRA</string>
    <string name="max_length">9</string>
    <string name="transacao_negada">Transação Negada</string>

    <string name="pendente_online">Pendente On-Line</string>

    <string name="mostrar_comprovante_pagamento">Comprovante de Pagamento</string>
    <string name="resultado">Resultado:</string>
    <string name="aprovado">APROVADO</string>
    <string name="terminal">Terminal:</string>

    <string name="numero_cartao">Numero do Cartao:</string>

    <string name="tipo_cartao">Tipo do Cartão:</string>
    <string name="ok">OK</string>


    <string name="valor_transacao_inexistente">Valor da Transação Inexistente</string>
    <string name="texto_simulador">Demo MobiPin App é um aplicativo simulador de vendas, desenvolvido para demonstração da transação bancária e não deve ser utilizado para vendas reais.</string>
    <string name="insira_passe_cartao">Insira ou Passe o Cartão no Mobi Pin e Aguarde...</string>

    <string name="magnetico">Magnético</string>
    <string name="valor_espaco">VALOR:</string>

    <string name="transacao_ok1">Transação OK</string>
    <string name="transacao_ok2"> </string>
    //TEF

    <string-array name="Tamanhos">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="Larguras">
        <item>2</item>
        <item>1</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="Alturas">
        <item>120</item>
        <item>60</item>
        <item>180</item>
        <item>240</item>
        <item>300</item>
    </string-array>

    <string-array name="Fonts">
        <item>FONT.A</item>
        <item>FONT.B</item>
    </string-array>

    <string-array name="BarCodes">
        <item>QR_CODE</item>
        <item>CODE_39</item>
        <item>CODE_93</item>
        <item>CODE_128</item>
        <item>EAN_13</item>
        <item>EAN_8</item>
        <item>UPC-A</item>
        <item>UPC-E</item>
        <item>ITF</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>