<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".impressora.ImpressoraActivity"
    android:background="@color/AzGertec">

    <TextView
        android:id="@+id/txtImpressora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/kiosk_title"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/btImage"
        app:layout_constraintEnd_toEndOf="@id/btCupom"
        app:layout_constraintStart_toStartOf="@id/btImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btImage"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/start_lock_task"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btCupom"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shadow"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCupom"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_lock_task"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shadow"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btImprimirQRCode"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:text="@string/print_qrcode"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/btImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btImage"
        app:layout_constraintVertical_bias="0.250" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btImprimirCodeBar"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:text="@string/print_codabar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btImprimirQRCode"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.630" />

</androidx.constraintlayout.widget.ConstraintLayout>